# freesurfer-post

./: .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  env.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml
freesurfer_post/: __init__.py  cli.py  core.py  utils.py  workflows.py
freesurfer_post/data/: __init__.py  surfacestats.json
freesurfer_post/interfaces/: __init__.py  interfaces.py  tabular.py
tests/: __init__.py  test.sh  test_core.py  test_utils.py
